# better-phrase

./: .gitignore  LICENSE  README.en.md  README.md  README.zh-CN.md  SKILL.md  better-phrase.sh  hooks.json  install.sh  pyproject.toml  uninstall.sh
better_phrase/: __init__.py  __main__.py  cli.py  config.py  detector.py  hook.py  prompts.py
docs/: CNAME  index.html  install.sh
docs/en/: index.html
tests/: __init__.py  test_config.py  test_detector.py  test_hook.py  test_settings_patch.py
tools/: README.md  bench_hook.py  debug_hook_payload.sh  demo_mascot.py  settings_patch.py
